<resources>
    <string name="app_name" translatable="false">FairEmail</string>
    <string name="app_copyright" translatable="false">Copyright &#x24B8; 2018–2024 by M. Bokhorst</string>
    <string name="app_search">FairEmail search</string>
    <string name="app_send_self">Send to self</string>
    <string name="app_answer" translatable="false">FairEmail template</string>
    <string name="app_changelog">Changelog</string>
    <string name="app_welcome">FairEmail is an open source email app focused on privacy and security. For this reason some features might work differently from what you are used to.</string>
    <string name="app_limitations">For example, messages are reformatted by default to remove unsafe elements and to improve readability, and opening links needs to be confirmed for safety. Both can be disabled if desired.</string>
    <string name="app_eula" translatable="false">THIS SOFTWARE IS PROVIDED BY THE AUTHOR \'\'AS IS\'\' AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE AUTHOR BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.</string>
    <string name="app_unsupported">Bugs in the Android version of this particular device cause crashes</string>
    <string name="app_data_loss">All data may be lost</string>
    <string name="app_continue">Continue anyway</string>
    <string name="app_exit">Go \'back\' again to exit</string>
    <string name="app_cake">Insufficient storage space left</string>
    <string name="app_cake_remaining">Remaining storage space on the device: %1$s</string>
    <string name="app_cake_required">Minimum required storage space: %1$s</string>
    <string name="app_updated">Last update: %1$s</string>
    <string name="app_download">Downloaded from: %1$s</string>
    <string name="app_dmarc" translatable="false">DMARC</string>
    <string name="channel_service">Monitor</string>
    <string name="channel_send">Send</string>
    <string name="channel_notification">Email</string>
    <string name="channel_progress">Progress</string>
    <string name="channel_update">Updates</string>
    <string name="channel_announcements">Announcements</string>
    <string name="channel_warning">Warnings</string>
    <string name="channel_error">Errors</string>
    <string name="channel_alert">Server alerts</string>
    <string name="channel_group_contacts">Contacts</string>
    <string name="channel_service_description">Synchronizing and monitoring of accounts</string>
    <string name="channel_send_description">Sending of messages</string>
    <string name="channel_notification_description">New message notifications</string>
    <string name="channel_progress_description">Progress notifications of longer running activities</string>
    <plurals name="page_conversation">
        <item quantity="one">Conversation</item>
        <item quantity="other">Conversations</item>
    </plurals>
    <plurals name="page_message">
        <item quantity="one">Message</item>
        <item quantity="other">Messages</item>
    </plurals>
    <string name="page_folders">Folders</string>
    <string name="page_compose">Compose</string>
    <string name="tile_synchronize">Synchronize</string>
    <string name="tile_unseen">New messages</string>
    <string name="tile_already_added" translatable="false">Tile was already added</string>
    <string name="shortcut_refresh">Refresh</string>
    <string name="shortcut_compose">Compose</string>
    <string name="shortcut_setup">Settings</string>
    <plurals name="title_notification_synchronizing">
        <item quantity="one">Monitoring %1$d account</item>
        <item quantity="other">Monitoring %1$d accounts</item>
    </plurals>
    <plurals name="title_notification_operations">
        <item quantity="zero"></item>
        <item quantity="one">%1$d operation pending</item>
        <item quantity="other">%1$d operations pending</item>
    </plurals>
    <plurals name="title_notification_unseen">
        <item quantity="one">%1$d new message</item>
        <item quantity="other">%1$d new messages</item>
    </plurals>
    <plurals name="title_notification_unsent">
        <item quantity="one">%1$d message to be sent</item>
        <item quantity="other">%1$d messages to be sent</item>
    </plurals>
    <plurals name="title_tile_unseen">
        <item quantity="one">%1$d new</item>
        <item quantity="other">%1$d new</item>
    </plurals>
    <plurals name="title_moving_messages">
        <item quantity="one">Move %1$d message?</item>
        <item quantity="other">Move %1$d messages?</item>
    </plurals>
    <plurals name="title_deleting_messages">
        <item quantity="one">Delete %1$d message permanently?</item>
        <item quantity="other">Delete %1$d messages permanently?</item>
    </plurals>
    <plurals name="title_attachments">
        <item quantity="one">One attachment</item>
        <item quantity="other">%1$d attachments</item>
    </plurals>
    <plurals name="title_ask_spam">
        <item quantity="one">Treat %1$d message as spam?</item>
        <item quantity="other">Treat %1$d messages as spam?</item>
    </plurals>
    <string name="title_ask_spam_who">Treat message from %1$s as spam?</string>
    <string name="title_junk_hint">Your email provider is responsible for filtering spam. An email app does not have all the data needed to do this reliably.</string>
    <string name="title_junk_pop_hint">
        Messages from blocked senders will not be downloaded.
        If "Leave messages on server" is not enabled, these messages will be lost permanently!
    </string>
    <string name="title_block">Block %1$s</string>
    <string name="title_block_sender">Block sender</string>
    <string name="title_block_sender_domain">Block domain \'%1$s\'</string>
    <string name="title_block_sender_remark">Blocking means automatically moving to the spam folder</string>
    <string name="title_block_sender_hint">
        Blocking a sender is a free feature.
        Blocking a sender domain uses filter rules, which is a pro feature.
    </string>
    <string name="title_blocked_senders">Blocked senders</string>
    <string name="title_unblock_all">Unblock all</string>
    <string name="title_unblock_all_remark">This will reset all lists and options that could result in blocking senders</string>
    <plurals name="title_ask_block_sender">
        <item quantity="one">Block sender of %1$s message?</item>
        <item quantity="other">Block sender of %1$s messages?</item>
    </plurals>
    <string name="title_hours">Hours</string>
    <plurals name="title_days">
        <item quantity="one">%1$s day</item>
        <item quantity="other">%1$s days</item>
    </plurals>
    <string name="title_junk_filter">Use local spam filter</string>
    <string name="title_junk_filter_hint">This can increase battery usage and incorrectly mark messages as spam</string>
    <string name="title_junk_blocklist">Use spam block lists</string>
    <string name="title_junk_clear">Clear</string>
    <string name="title_junk_clear_hint">This will delete all block sender rules</string>
    <string name="title_notification_sending">Sending messages</string>
    <string name="title_notification_waiting">Waiting for suitable connection</string>
    <string name="title_notification_idle">Idle</string>
    <string name="title_notification_failed">\'%1$s\' failed</string>
    <string name="title_notification_alert">Server alert: \'%1$s\'</string>
    <string name="title_notification_sending_left">Attempts left: %1$d</string>
    <string name="title_notification_sending_retry">Sending will be retried on internet connection changes or pulling down on the outbox</string>
    <string name="title_notification_sending_failed">Sending to %1$s failed</string>
    <string name="title_notification_redacted">Redacted: biometric or PIN authentication enabled</string>
    <string name="title_of" translatable="false">%1$s/%2$s</string>
    <string name="title_name_count" translatable="false">%1$s (%2$s)</string>
    <string name="title_name_plus" translatable="false">%1$s +%2$d</string>
    <string name="title_from_to" translatable="false">%1$s &gt;&gt; %2$s</string>
    <string name="title_to_from" translatable="false">%2$s &lt;&lt; %1$s</string>
    <string name="title_title_description" translatable="false">%1$s: %2$s</string>
    <string name="title_factor_minutes">%1$d minutes</string>
    <string name="menu_answers">Templates</string>
    <string name="menu_rules">Rules</string>
    <string name="menu_operations">Operations</string>
    <string name="menu_contacts">Local contacts</string>
    <string name="menu_setup">Settings</string>
    <string name="menu_legend">Legend</string>
    <string name="menu_test">Test program</string>
    <string name="menu_faq">Support</string>
    <string name="menu_translate">Help translate</string>
    <string name="menu_issue">Report issue</string>
    <string name="menu_attribution">Attribution</string>
    <string name="menu_privacy">Privacy</string>
    <string name="menu_about">About</string>
    <string name="menu_pro">Pro features</string>
    <string name="menu_rate">Rate this app</string>
    <string name="title_welcome">Welcome</string>
    <string name="title_eula">End-user license agreement</string>
    <string name="title_license">Open-source license</string>
    <string name="title_gplv3" translatable="false">GNU General Public License - Version 3</string>
    <string name="title_contributors">Contributors</string>
    <string name="title_agree">I agree</string>
    <string name="title_disagree">I disagree</string>
    <string name="title_version">Version %1$s</string>
    <string name="title_privacy_policy">Privacy policy</string>
    <string name="title_list_accounts">Accounts</string>
    <string name="title_list_identities">Identities</string>
    <string name="title_edit_account">Edit account</string>
    <string name="title_edit_identity">Edit identity</string>
    <string name="title_edit_folder">Edit folder</string>
    <string name="title_disable_gmail">Disable Gmail app</string>
    <string name="title_setup">Settings</string>
    <string name="title_setup_help">Help</string>
    <string name="title_setup_quick">Quick setup</string>
    <string name="title_setup_intro">Setting up an account is just three steps and after that you can send and receive emails</string>
    <string name="title_setup_simple">There is no need to change any other options</string>
    <string name="title_setup_issue">FairEmail was developed to help you protect your privacy and represents literally thousands of hours of work. If you have any problems, please contact me first for support before leaving a bad review. I am happy to help!</string>
    <string name="title_setup_analytics">FairEmail does not display ads and does not track or analyze your behavior. Bugsnag is used for error reporting and is disabled by default.</string>
    <string name="title_setup_quick_accounts">Add or change accounts</string>
    <string name="title_from">From:</string>
    <string name="title_to">To:</string>
    <string name="title_reply_to">Reply to:</string>
    <string name="title_cc">CC:</string>
    <string name="title_bcc">BCC:</string>
    <string name="title_via_identity">Via:</string>
    <string name="title_size">Size:</string>
</resources>