<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/ivSearchContact"
        android:layout_width="21dp"
        android:layout_height="21dp"
        android:layout_marginEnd="12dp"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:src="@drawable/baseline_search_24"
        app:layout_constraintEnd_toStartOf="@+id/ivNotifyContact"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivNotifyContact"
        android:layout_width="21dp"
        android:layout_height="21dp"
        android:layout_marginEnd="12dp"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:src="@drawable/baseline_notifications_24"
        app:layout_constraintEnd_toStartOf="@+id/ivAddContact"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivAddContact"
        android:layout_width="21dp"
        android:layout_height="21dp"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:src="@drawable/baseline_import_contacts_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvFromExTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:text="@string/title_from"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivAddContact" />

    <TextView
        android:id="@+id/tvFromEx"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginEnd="6dp"
        android:text="From"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textIsSelectable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/barrier_addresses"
        app:layout_constraintTop_toBottomOf="@id/ivAddContact" />

    <TextView
        android:id="@+id/tvToTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:text="@string/title_to"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvFromEx" />

    <TextView
        android:id="@+id/tvTo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginEnd="6dp"
        android:text="To"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textIsSelectable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/barrier_addresses"
        app:layout_constraintTop_toBottomOf="@id/tvFromEx" />

    <TextView
        android:id="@+id/tvReplyToTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:text="@string/title_reply_to"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTo" />

    <TextView
        android:id="@+id/tvReplyTo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginEnd="6dp"
        android:text="Reply to"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textIsSelectable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/barrier_addresses"
        app:layout_constraintTop_toBottomOf="@id/tvTo" />

    <TextView
        android:id="@+id/tvCcTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:text="@string/title_cc"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvReplyTo" />

    <TextView
        android:id="@+id/tvCc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginEnd="6dp"
        android:text="Cc"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textIsSelectable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/barrier_addresses"
        app:layout_constraintTop_toBottomOf="@id/tvReplyTo" />

    <TextView
        android:id="@+id/tvBccTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:text="@string/title_bcc"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvCc" />

    <TextView
        android:id="@+id/tvBcc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginEnd="6dp"
        android:text="Bcc"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textIsSelectable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/barrier_addresses"
        app:layout_constraintTop_toBottomOf="@id/tvCc" />

    <TextView
        android:id="@+id/tvIdentityTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:text="@string/title_via_identity"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvBcc" />

    <TextView
        android:id="@+id/tvIdentity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginEnd="6dp"
        android:text="user@example.org"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textIsSelectable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/barrier_addresses"
        app:layout_constraintTop_toBottomOf="@id/tvBcc" />

    <TextView
        android:id="@+id/tvTimeEx"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginEnd="8dp"
        android:text="12:34:56"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="?attr/colorUnread"
        android:textIsSelectable="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintStart_toEndOf="@+id/barrier_addresses"
        app:layout_constraintTop_toBottomOf="@id/tvIdentity" />

    <TextView
        android:id="@+id/tvSizeExTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="6dp"
        android:text="@string/title_size"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        app:layout_constraintEnd_toStartOf="@+id/tvSizeEx"
        app:layout_constraintTop_toBottomOf="@+id/tvIdentity" />

    <TextView
        android:id="@+id/tvSizeEx"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="6dp"
        android:gravity="end"
        android:text="9023 MB"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textIsSelectable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvIdentity" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier_addresses"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="end"
        app:constraint_referenced_ids="
            tvFromExTitle,tvToTitle,tvReplyToTitle,
            tvCcTitle,tvBccTitle,
            tvIdentityTitle" />

    <TextView
        android:id="@+id/tvSubjectEx"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginEnd="6dp"
        android:text="Subject"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="?attr/colorUnread"
        android:textIsSelectable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTimeEx" />

    <TextView
        android:id="@+id/tvFlags"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginEnd="6dp"
        android:text="Flags"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textIsSelectable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvSubjectEx" />

    <TextView
        android:id="@+id/tvKeywords"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginEnd="6dp"
        android:text="Keywords"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textIsSelectable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvFlags" />
</androidx.constraintlayout.widget.ConstraintLayout>